[gd_scene load_steps=8 format=3 uid="uid://dxjminxdipxi8"]

[ext_resource type="Script" path="res://player.gd" id="1_kns4o"]
[ext_resource type="Texture2D" uid="uid://c1p4qt3kyewpd" path="res://icon.svg" id="2_32t8p"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vrk4c"]

[sub_resource type="CircleShape2D" id="CircleShape2D_jetlj"]
radius = 47.619

[sub_resource type="Animation" id="Animation_15oa6"]
resource_name = "Attack"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeleeRange/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, false, false, true]
}

[sub_resource type="Animation" id="Animation_ckwve"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeleeRange/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_myl5g"]
_data = {
"Attack": SubResource("Animation_15oa6"),
"RESET": SubResource("Animation_ckwve")
}

[node name="Player" type="CharacterBody2D" groups=["Player"]]
scale = Vector2(4.2, 4.2)
collision_layer = 2
script = ExtResource("1_kns4o")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.159, 0.38)
texture = ExtResource("2_32t8p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(1, 1.635)
shape = SubResource("CapsuleShape2D_vrk4c")

[node name="TurnAxis" type="Marker2D" parent="."]

[node name="CastPoint" type="Marker2D" parent="TurnAxis"]
position = Vector2(20.9524, -6.01853e-36)

[node name="MeleeRange" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="MeleeRange"]
scale = Vector2(1, 0.6)
shape = SubResource("CircleShape2D_jetlj")
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_myl5g")
}

[connection signal="body_entered" from="MeleeRange" to="." method="_on_melee_range_body_entered"]
